--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Esta es una prueba con Jenkins</h1>
-    <h1>Jenkis es un poco genial</h1>
+    <h1>Hola Mundo</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis. Quam earum esse tenetur sint, veniam
         corporis magni sit. Minus impedit excepturi quae itaque facere qui aut cum accusamus magni.
