--- a/Público/Index.html
+++ b/Público/Index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Esto es una prueba en Jenkins</h1>
-    <h1>Hola Mundo</h1>
+    <h1>Esta es una prueba con Jenkins</h1>
+    <h1>Jenkis es genial</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis. Quam earum esse tenetur sint, veniam
         corporis magni sit. Minus impedit excepturi quae itaque facere qui aut cum accusamus magni.
